Fix unrelated CSS issue
Invalid questions tooltip were not placed correctly, this was detected
by e2e tests here because the new layout + the incorrect position
would make it overlap with a button.

--- a/css/includes/components/form/_form-renderer.scss
+++ b/css/includes/components/form/_form-renderer.scss
@@ -150,6 +150,7 @@
             color: var(--tblr-form-invalid-color);
             padding: unset;
             margin-top: .25rem;
+            top: unset;
         }
     }
 }
